// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:TooltipWrapper with context data 1`] = `
<body>
  <div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
      data-prismui-theme="cxd"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
            role="page-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  body:this-is-text
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip __PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip--light"
    data-prismui-theme="cxd"
    offset="0,0"
    role="tooltip"
    style="left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-arrow"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-title"
    >
      title:second-text
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-body"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Html"
      >
        info:this-is-text
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with offset 1`] = `
<body>
  <div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
      data-prismui-theme="cxd"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
            role="page-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper mb-1"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  激活文字提示
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip __PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip--light"
    data-prismui-theme="cxd"
    offset="19,-22"
    role="tooltip"
    style="left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-arrow"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-body"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Html"
      >
        提示文字
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with showArrow 1`] = `
<body>
  <div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
      >
        <span>
          没有箭头
        </span>
      </span>
    </div>
  </div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip __PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip--light"
    data-prismui-theme="cxd"
    offset="0,0"
    role="tooltip"
    style="left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-title"
    >
      标题
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-body"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Html"
      >
        提示内容
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with style & tooltipStyle 1`] = `
<body>
  <div>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper __PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper--inline"
      style="font-style: italic;"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
      >
        <span>
          一段文案
        </span>
      </span>
    </span>
  </div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip __PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip--light"
    data-prismui-theme="cxd"
    offset="0,0"
    role="tooltip"
    style="font-weight: bold; left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-arrow"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tooltip-body"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Html"
      >
        文字提示(加粗)
      </span>
    </div>
  </div>
</body>
`;

exports[`Renderer:TooltipWrapper with trigger & title 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper mb-1"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                hover激活文字提示
              </span>
            </span>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper mb-1"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                click激活文字提示
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:TooltipWrapper with wrapperComponent 1`] = `
<body>
  <div>
    <pre
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TooltipWrapper"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
      >
        <span>
          function HelloWorld() {
    console.log('Hello World');
}
        </span>
      </span>
    </pre>
  </div>
</body>
`;
